# AI-BE-technical-assignment

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  pytest.ini
.github/: ci.yml
app/: deps.py  entrypoint.sh  main.py  schemas.py
app/routers/: infer.py
app/services/: .vector_search.py.swp  inference.py  vector_search.py
docs/: README.md
embedder/: embded_docs.py
example_datas/: company_ex_KT.json  company_ex_KT뮤직.json  company_ex_SK텔레콤.json  company_ex_SK플레닛.json  company_ex_국민은행.json  company_ex_밀리의서재.json  company_ex_삼성전자.json  company_ex_서치라이트.json  company_ex_시어스랩.json  company_ex_앤틀러.json  company_ex_엘박스.json  company_ex_위대한상상.json  company_ex_카사.json  company_ex_코인텍.json  company_news.csv  setup_company_data.py  setup_company_news_data.py  talent_ex1.json  talent_ex2.json  talent_ex3.json  talent_ex4.json
nginx/conf.d/: searchright.conf
scripts/: init_db.py
tests/: conftest.py  real_response_ex1.json  real_response_ex2.json  real_response_ex3.json  real_response_ex4.json  test_inference.py
tests/unit/: test_inference_service.py  test_router.py  test_utils.py  test_vector_search.py
